Fix alignment issues for puzzle.

--- a/Course-08-Building-High-Performance-Modern-JavaScript-Web-Applications/Section-04-JavaScript-Events-In-Depth/jigSaw/styles/components/_puzzle.scss
+++ b/Course-08-Building-High-Performance-Modern-JavaScript-Web-Applications/Section-04-JavaScript-Events-In-Depth/jigSaw/styles/components/_puzzle.scss
@@ -29,7 +29,7 @@
   /*margin-left: 200px;*/
   background: url("../assets/images/_Puzzle_bg_unsolved.png") no-repeat;
   width: 868px;
-  height: 579px;
+  height: 574px;
   display:inline-flex;
   flex-direction:column;
   justify-content: center;
@@ -38,12 +38,12 @@
 
   &__row{
     display:flex;
-
+    margin-bottom: -2px;
   }
   &__row-dropzone{
-    width:110px;
+    width:113.2px;
     height:95px;
-    border: 1px solid #fff;
+    border: 1px solid transparent;
 
     margin-right: 53.5px;
     &:last-child{
@@ -52,7 +52,7 @@
   }
   &__row-offset{
     display:flex;
-    margin-left: 83px;
+    margin-left: 0px;
   }
 }
 
